base/app-technitium.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium
spec:
  tls:
  - secretName: technitium-certs
    hosts:
    - technitium.kotimme.cc
  rules:
  - host: technitium.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: technitium-console
            port:
              name: console-port
---
apiVersion: v1
kind: Service
metadata:
    name: technitium-console
spec:
    ports:
      - name: console-port
        port: 80
        targetPort: console-port
    selector:
        app: technitium
    type: NodePort
---
apiVersion: v1
kind: Service
metadata:
    name: technitium-dns
spec:
    ports:
      - name: dns-port
        port: 53
        targetPort: dns-port
    selector:
        app: technitium
    type: LoadBalancer
    loadBalancerIP: 192.168.68.201
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: technitium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: technitium
  serviceName: "technitium"
  template:
    metadata:
      labels:
        app: technitium
    spec:
      # securityContext:
      #  fsGroup: 1978
      containers:
      - name: technitium
        image: technitium/dns-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: console-port
          containerPort: 5380
        - name: dns-port
          containerPort: 53
        volumeMounts:
        - name: dir
          mountPath: /etc/dns
          subPath: technitium
      imagePullSecrets: 
        - name: docker-hub
      volumes:
        - name: dir
          persistentVolumeClaim:
           claimName: nfs
